# cpp_animal_shogi

./: .gitignore  README.md
ai/: CMakeLists.txt  attack.hpp  common.hpp  countreward.hpp  game.hpp  hash.hpp  main.cpp  matesearch.hpp  model.hpp  movecapture.hpp  movecheck.hpp  movedrop.hpp  moveevasion.hpp  movegen.hpp  movelegal.hpp  movelist.hpp  nn.hpp  oracle.hpp  reviewbuffer.hpp  search.hpp  selfplay.hpp  thread.hpp  ubfm.hpp  util.hpp
learn/: cpp_animal_shogi  evaluate_network.py  gamelibs.cpp  generate_transformer_model.py  history_dataset.py  oracle_dataset.py  priority_dataset.py  selfplay.sh  single_network.py  train.sh  train_network.py  train_network_oracle.py  train_network_trans.py  train_trans.sh  train_worker.py  train_worker_trans.py
oracle/: CMakeLists.txt  allStateTable.h  common.hpp  dobutsu.cc  dobutsu.h  game.hpp  hash.hpp  main.cpp  movelist.hpp  util.hpp  winLoseTable.h
